tests/negative/for_not_list.spk
(for v 42 (print "$0" v))
